# functional-way

haskell-way/: haskell-way.cabal
haskell-way/src/Tree/: TransfromBST.hs
