name:                haskell-way
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jvanbruegge/haskell-way#readme
author:              Jan van Brügge
maintainer:          supermanitu@gmail.com
copyright:           2018 Jan van Brügge
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  main-is:             test/Main.hs
  build-depends:       base, hedgehog
  default-language:    Haskell2010
